...
    onSuccess(data: Category) {
      productIdRef.current = data.id;
      queryClient.invalidateQueries({
        queryKey: ["categories"],
      });

      showAlert("Categoria guardada", `${data.name} se guardo correctamente`);
    },
  });

  return { productMutation };
};

