...
            title: "Categorias",
            headerLeft: () => <LogoutIconButton />,
            headerRight: () => (
              <View style={{ flexDirection: "row", gap: 16 }}>
                <ActivityHeaderButton />
                <AddNewButton
                  testID="home-new-category-button"
                  onPressAction={() => router.navigate("/new-category")}
                />
              </View>
            ),
          }}
        />
...
