appId: com.fabianmeneses56.mgp-personal-proyect-front
---
- launchApp
- assertVisible: "Ingresar"
- tapOn:
    id: "login-email-input"
- inputText: ${E2E_TEST_EMAIL}
- tapOn:
    id: "login-password-input"
- inputText: ${E2E_TEST_PASSWORD}
- hideKeyboard
- tapOn:
    id: "login-submit-button"
- assertVisible: "Tus categorias"
